Refactor codice con SonarLint
refactor, risolti warning SonarLint e migliorata la qualità del codice